# ithras

./: .replit  ARCHITECTURE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  entrypoint.prod.sh  frontend_server.py  line_counter.sh  metadata.json  package-lock.json  package.json  pyproject.toml  replit.md  start.py
attached_assets/: Pasted-The-source-list-for-the-Content-Security-Policy-directi_1773939406495.txt  Pasted-Traceback-most-recent-call-last-File-usr-local-bin-uvic_1773953824576.txt
core/: alembic.ini
core/alembic/: README  env.py
core/backend/: Dockerfile  entrypoint.sh  requirements.txt
core/frontend/: .eslintrc.cjs  Dockerfile  cloudbuild.yaml  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vitest.config.js
deploy/: env.example  setup.sh
docs/: ARCHITECTURE_AND_DESIGN.md  BRD_AI_CAREER_GROWTH_AGENT.md  CLOUD_RUN_DEPLOYMENT.md  GITLAB_CI_SETUP.md  LOCAL_DEV.md  PAGE_QUALITY_AUDIT.md  PERMISSIONS.md  PLAN_COMPANY_INSTITUTION_ENHANCEMENTS.md  UI_DESIGN_SYSTEM.md  UI_UX_SPEED_REVIEW_2026-03.md  feed-dashboard-design-spec.md
docs/plans/: HR_MODE_RECRUITMENT_LATERAL.plan.md  ithras_granular_task_registry.md  shared-primitives-router-service-rollout.plan.md
products/calendar-management/: RULE.md
products/feed/: README.md
products/recruitment-university/: RULE.md
scripts/: fix-cloud-run-database-url.sh  rebuild-frontend.sh  reset-db.sh
shared/: __init__.py
shared/auth/: __init__.py  auth.py  jwt_utils.py  password_utils.py
shared/components/: AdditionalResponsibilityForm.js  AppSearchBar.js  AppTopBar.js  EducationForm.js  ExperienceForm.js  IthrasLogo.js  OtherAchievementForm.js  ProfileLayout.js  StatusChip.js
shared/database/: config.py  database.py
shared/primitives/: AutocompleteInput.js  Button.js  EntitySearchInput.js  Input.js  MonthYearInput.js  index.js
shared/search/: __init__.py  institution_query.py  institution_search.py
shared/services/: apiBase.js  core.js  displayUtils.js  index.js  longformApi.js  profile.js  searchApi.js  setup.js
shared/setup/: __init__.py  engine.py
shared/styles/: authHeroPanel.js  base.css  index.css  longform.css  tokens.css
shared/telemetry/: __init__.py  context.py  repository.py  schemas.py  types.py
shared/utils/: searchApiErrors.js  theme.js
tests/: conftest.py  requirements.txt  test_institution_search.py
tests/e2e/: application-flow.spec.js  auth.spec.js  cv-builder.spec.js  governance.spec.js  helpers.js  jd-submission.spec.js  offer-management.spec.js  package.json  placement.spec.js  playwright.config.js  recruitment-cycles.spec.js  (+1 more)
(+1023 files in other folders)
