[project]
name = "ithras"
version = "1.0.0"
description = "Ithras Enterprise Placement Intelligence Portal"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.1",
    "google-auth>=2.49.1",
    "google-genai>=1.68.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pillow>=12.1.1",
    "psycopg2-binary==2.9.9",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "redis>=7.3.0",
    "reportlab>=4.4.10",
    "sqlalchemy==2.0.23",
    "starlette>=0.52.1",
    "uvicorn>=0.42.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["core/app/backend", "."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: tests that require a running database with seeded data",
    "unit: pure unit tests with no external dependencies",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pytest.env]
DATABASE_URL = {value = "postgresql://ithras_user:ithras_password@localhost:5432/placement_db", transform = true}
